Updated dependencies to fix vulnerability issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-time-range",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A flexible time range selector for React",
   "main": "build/index.js",
   "scripts": {
@@ -37,30 +37,23 @@
   },
   "homepage": "https://github.com/peterjoseph/react-time-range#readme",
   "dependencies": {
-    "css-loader": "^0.28.9",
-    "file-loader": "^1.1.6",
-    "moment": "^2.20.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "style-loader": "^0.20.1",
-    "webpack": "^3.11.0"
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.20.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "eslint": "^4.17.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-class-property": "^1.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "prettier-eslint": "^8.8.1"
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.7.0",
+    "webpack-cli": "^3.1.2"
   }
 }
